[QSYNC-22] [Ayoob & Mustafa] Fixed general layout issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,8 +6,10 @@
 
 .flex-container {
   display: flex;
-  width: 100vw;
-  padding: 10px 0 10px 0;
+  width: 90vw;
+  height: 90vh;
+  overflow: scroll;
+  padding: 40px;
 }
 
 .graph-container {
