--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -2,6 +2,7 @@
   background-color: transparent;
   position: sticky;
   top: 0;
+  left: 0%;
   height: 3vh;
 }
 
@@ -9,4 +10,12 @@
   right: 0%;
   margin-right: 1vw;
   color: white;
+}
+
+.logo {
+  left: 0%;
+  margin-top: 1vh;
+  margin-left: 1vw;
+  width: 120px;
+  height: 30px;
 }
